--- a/src/main/resources/reports/PaySlip.jrxml
+++ b/src/main/resources/reports/PaySlip.jrxml
@@ -90,21 +90,30 @@
 	<pageHeader>
 		<band height="45" splitType="Stretch">
 			<staticText>
-				<reportElement x="470" y="10" width="100" height="30" uuid="6bc9484f-476d-4740-9a32-664bcc8edee7">
+				<reportElement x="470" y="7" width="100" height="30" uuid="6bc9484f-476d-4740-9a32-664bcc8edee7">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a111fb93-0ea5-4d12-9402-ed0a1668ab39"/>
 				</reportElement>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
 				<text><![CDATA[Payment Date]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="-10" y="7" width="100" height="30" uuid="68fa1f6f-df40-433e-b6f6-97a458f25f47">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8d7e80ac-2264-47af-bc49-c41db0d4f3c7"/>
 				</reportElement>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
 				<text><![CDATA[Payment Id]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="92" y="7" width="100" height="30" uuid="2c44b4ea-bb47-45f4-9470-bf32152dd0f6">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3a2db027-fbb3-49aa-a29b-69eb4a867fab"/>
 				</reportElement>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
 				<text><![CDATA[Employee Id]]></text>
 			</staticText>
 		</band>
@@ -115,35 +124,74 @@
 				<reportElement x="470" y="-5" width="100" height="30" uuid="fa2b8fae-deac-4b77-915b-33da92830a07">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a111fb93-0ea5-4d12-9402-ed0a1668ab39"/>
 				</reportElement>
+				<textElement>
+					<font size="11"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{payment_date}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="-10" y="-8" width="100" height="30" uuid="bd9ef680-01d0-414d-a4aa-020c232b8a54">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8d7e80ac-2264-47af-bc49-c41db0d4f3c7"/>
 				</reportElement>
+				<textElement>
+					<font size="11"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{payment_id}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="92" y="-8" width="100" height="30" uuid="69f30d2c-78c1-4aa6-9a72-a40f38f46b28">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3a2db027-fbb3-49aa-a29b-69eb4a867fab"/>
 				</reportElement>
+				<textElement>
+					<font size="11"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{employee_id}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="-20" y="37" width="610" height="1" uuid="9548598a-df9d-4218-87c8-8e7777b87edf"/>
 			</line>
+			<staticText>
+				<reportElement x="-10" y="44" width="100" height="30" uuid="79714944-9d76-4016-b45d-221afc32f12f">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4b11111e-8b2b-4163-923d-496bcc1b2f73"/>
+				</reportElement>
+				<text><![CDATA[Employee Name]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="90" y="45" width="100" height="30" uuid="4db016c7-1f8e-4ad9-bad7-81793c8a1092">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="19bb9216-8c6d-47f9-9b3a-c71d1a5d6ca7"/>
+				</reportElement>
+				<text><![CDATA[Month Year]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="200" y="45" width="100" height="30" uuid="f61f9db3-00dc-47cb-a1b0-13eaf062b15a">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3c5f803e-f953-4457-92a2-6ae24ff840f7"/>
+				</reportElement>
+				<text><![CDATA[Basic Salary]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="310" y="45" width="100" height="30" uuid="6a52eea2-1952-484f-8c54-be75d4f07a7e">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bc9e801d-dc91-4dc2-8d76-2e58904fc0ce"/>
+				</reportElement>
+				<text><![CDATA[Bonus(+)]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="440" y="45" width="100" height="30" uuid="d7370612-4a10-412d-b311-b922f9d6936f">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d72fd48c-2fc3-4722-b09e-6dcf75b1296b"/>
+				</reportElement>
+				<text><![CDATA[Deductions(-)]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="151" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="30" width="100" height="30" uuid="ac0cfc02-8586-419c-89f7-b63e94fbcc4e">
+				<reportElement x="-10" y="0" width="100" height="30" uuid="ac0cfc02-8586-419c-89f7-b63e94fbcc4e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4b11111e-8b2b-4163-923d-496bcc1b2f73"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{employee_name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="110" y="30" width="100" height="30" uuid="4b18ac0f-4177-421e-8e3a-de4a553728a3">
+				<reportElement x="90" y="0" width="100" height="30" uuid="4b18ac0f-4177-421e-8e3a-de4a553728a3">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="19bb9216-8c6d-47f9-9b3a-c71d1a5d6ca7"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{month_year}]]></textFieldExpression>
@@ -158,18 +206,6 @@
 				<textFieldExpression><![CDATA[$F{net_pay}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="0" width="100" height="30" uuid="79714944-9d76-4016-b45d-221afc32f12f">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4b11111e-8b2b-4163-923d-496bcc1b2f73"/>
-				</reportElement>
-				<text><![CDATA[Employee Name]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="110" y="-1" width="100" height="30" uuid="4db016c7-1f8e-4ad9-bad7-81793c8a1092">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="19bb9216-8c6d-47f9-9b3a-c71d1a5d6ca7"/>
-				</reportElement>
-				<text><![CDATA[Month Year]]></text>
-			</staticText>
-			<staticText>
 				<reportElement x="470" y="90" width="100" height="30" uuid="d1670e45-6e6a-4736-ba0c-4428a7ab6e1e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="eced5853-20be-430e-9d61-567abd037ee3"/>
 				</reportElement>
@@ -179,44 +215,26 @@
 				<text><![CDATA[Net Pay]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="230" y="30" width="100" height="30" uuid="42906212-0baf-4dae-9f68-7a44aac4b049">
+				<reportElement x="200" y="0" width="100" height="30" uuid="42906212-0baf-4dae-9f68-7a44aac4b049">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3c5f803e-f953-4457-92a2-6ae24ff840f7"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{basic_salary}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="230" y="0" width="100" height="30" uuid="f61f9db3-00dc-47cb-a1b0-13eaf062b15a">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3c5f803e-f953-4457-92a2-6ae24ff840f7"/>
-				</reportElement>
-				<text><![CDATA[Basic Salary]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="350" y="30" width="100" height="30" uuid="cbac29cc-2aab-4738-b819-4eb7e0a76cac">
+				<reportElement x="310" y="0" width="100" height="30" uuid="cbac29cc-2aab-4738-b819-4eb7e0a76cac">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bc9e801d-dc91-4dc2-8d76-2e58904fc0ce"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{bonus}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="350" y="0" width="100" height="30" uuid="6a52eea2-1952-484f-8c54-be75d4f07a7e">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bc9e801d-dc91-4dc2-8d76-2e58904fc0ce"/>
-				</reportElement>
-				<text><![CDATA[Bonus(+)]]></text>
-			</staticText>
 			<line>
 				<reportElement x="-22" y="140" width="605" height="1" uuid="83a40ca7-d3c7-42f1-80d7-c52d3c4d0d87"/>
 			</line>
 			<textField>
-				<reportElement x="460" y="30" width="100" height="30" uuid="b214e5c9-4fea-4b5a-9c60-be7dc4009e48">
+				<reportElement x="440" y="0" width="100" height="30" uuid="b214e5c9-4fea-4b5a-9c60-be7dc4009e48">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d72fd48c-2fc3-4722-b09e-6dcf75b1296b"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{deductions}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="460" y="0" width="100" height="30" uuid="d7370612-4a10-412d-b311-b922f9d6936f">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d72fd48c-2fc3-4722-b09e-6dcf75b1296b"/>
-				</reportElement>
-				<text><![CDATA[Deductions(-)]]></text>
-			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
@@ -229,6 +247,9 @@
 		<band height="60" splitType="Stretch">
 			<staticText>
 				<reportElement x="240" y="30" width="100" height="20" uuid="72e12341-454f-444c-b69b-74549ca39fa3"/>
+				<textElement>
+					<font fontName="Arial Black"/>
+				</textElement>
 				<text><![CDATA[** End of Report **]]></text>
 			</staticText>
 			<staticText>
