--- a/src/main/resources/reports/EmployeeReport.jrxml
+++ b/src/main/resources/reports/EmployeeReport.jrxml
@@ -35,86 +35,148 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch"/>
+		<band height="90" splitType="Stretch">
+			<staticText>
+				<reportElement x="220" y="50" width="180" height="30" uuid="570d9b35-0ba5-4615-bdac-668c17230654"/>
+				<textElement>
+					<font size="14" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Employee Report]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="210" y="20" width="210" height="30" uuid="45c79a49-9b68-44a3-884e-807c38e18a5a"/>
+				<textElement>
+					<font size="20" isBold="true"/>
+				</textElement>
+				<text><![CDATA[COFFEE SHOP]]></text>
+			</staticText>
+			<line>
+				<reportElement x="-20" y="80" width="595" height="1" uuid="7ddda952-419d-4535-a9ff-2539e7a4a442"/>
+			</line>
+			<textField>
+				<reportElement x="440" y="40" width="130" height="30" uuid="41f902ab-0451-4784-9087-ea2d6bd73f8d"/>
+				<textElement>
+					<font fontName="Arial Black"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="-20" y="0" width="595" height="1" uuid="2f18106e-3efd-402f-98cd-26f5c2754f4d"/>
+			</line>
+			<line>
+				<reportElement x="-20" y="10" width="595" height="1" uuid="9babe522-e3d0-4215-8deb-3637dae968bc"/>
+			</line>
+		</band>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch"/>
+		<band height="10" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="70" splitType="Stretch">
 			<staticText>
-				<reportElement x="63" y="0" width="100" height="30" uuid="36e29955-49b4-414b-bcd2-8142146b546d">
+				<reportElement x="0" y="20" width="80" height="30" uuid="36e29955-49b4-414b-bcd2-8142146b546d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7db18523-21b2-46b5-a2c8-c9c6378ab3f4"/>
 				</reportElement>
-				<text><![CDATA[emp_id]]></text>
+				<textElement>
+					<font fontName="Arial Black"/>
+				</textElement>
+				<text><![CDATA[Employee ID]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="301" y="0" width="100" height="30" uuid="64333a65-6224-4056-ba59-103729dc290c">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="900ab160-601a-4a7d-a0e1-e49ea05ff2a6"/>
-				</reportElement>
-				<text><![CDATA[position]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="181" y="0" width="100" height="30" uuid="e5811c6b-d505-4186-ad00-815961c0599e">
+				<reportElement x="80" y="20" width="100" height="30" uuid="e5811c6b-d505-4186-ad00-815961c0599e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7f71501a-2bf4-48a0-a178-fb4341994cc0"/>
 				</reportElement>
-				<text><![CDATA[name]]></text>
+				<textElement>
+					<font fontName="Arial Black"/>
+				</textElement>
+				<text><![CDATA[Name]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="418" y="0" width="100" height="30" uuid="d890dcd4-7414-4c8e-8490-65839e366a24">
+				<reportElement x="200" y="20" width="100" height="30" uuid="64333a65-6224-4056-ba59-103729dc290c">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="900ab160-601a-4a7d-a0e1-e49ea05ff2a6"/>
+				</reportElement>
+				<textElement>
+					<font fontName="Arial Black"/>
+				</textElement>
+				<text><![CDATA[Job position]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="310" y="20" width="100" height="30" uuid="d890dcd4-7414-4c8e-8490-65839e366a24">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c258df51-4827-4218-9e2e-a196d4765e79"/>
 				</reportElement>
-				<text><![CDATA[salary]]></text>
+				<textElement>
+					<font fontName="Arial Black"/>
+				</textElement>
+				<text><![CDATA[Salary]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="512" y="0" width="100" height="30" uuid="66808bb2-8cfc-484e-9acb-1a58e461b55a">
+				<reportElement x="440" y="20" width="100" height="30" uuid="66808bb2-8cfc-484e-9acb-1a58e461b55a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8d93c96b-36c3-4939-8ea3-92ce3a953300"/>
 				</reportElement>
-				<text><![CDATA[contact]]></text>
+				<textElement>
+					<font fontName="Arial Black"/>
+				</textElement>
+				<text><![CDATA[Contact No]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="45" splitType="Stretch">
 			<textField>
-				<reportElement x="63" y="20" width="100" height="30" uuid="deff282a-7cf0-424a-bcc1-a853b6ca0411">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7db18523-21b2-46b5-a2c8-c9c6378ab3f4"/>
-				</reportElement>
-				<textFieldExpression><![CDATA[$F{emp_id}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="301" y="24" width="100" height="30" uuid="bd58ac1a-143a-404d-8d08-fc4509e7680e">
+				<reportElement x="200" y="0" width="100" height="30" uuid="bd58ac1a-143a-404d-8d08-fc4509e7680e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="900ab160-601a-4a7d-a0e1-e49ea05ff2a6"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{position}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="181" y="21" width="100" height="30" uuid="d9ad0f0c-01c1-498b-92b9-9003df68df5d">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7f71501a-2bf4-48a0-a178-fb4341994cc0"/>
-				</reportElement>
-				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="418" y="28" width="100" height="30" uuid="3c23d964-b9e4-40b8-9f0f-b634144da738">
+				<reportElement x="310" y="0" width="100" height="30" uuid="3c23d964-b9e4-40b8-9f0f-b634144da738">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c258df51-4827-4218-9e2e-a196d4765e79"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{salary}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="512" y="30" width="100" height="30" uuid="256ee43c-9465-4095-bb6d-3e4e5bbbb1fc">
+				<reportElement x="454" y="0" width="100" height="30" uuid="256ee43c-9465-4095-bb6d-3e4e5bbbb1fc">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8d93c96b-36c3-4939-8ea3-92ce3a953300"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{contact}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="-4" y="0" width="80" height="30" uuid="deff282a-7cf0-424a-bcc1-a853b6ca0411">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7db18523-21b2-46b5-a2c8-c9c6378ab3f4"/>
+				</reportElement>
+				<textFieldExpression><![CDATA[$F{emp_id}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="80" y="0" width="100" height="30" uuid="d9ad0f0c-01c1-498b-92b9-9003df68df5d">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7f71501a-2bf4-48a0-a178-fb4341994cc0"/>
+				</reportElement>
+				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="54" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="71" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="206" splitType="Stretch">
+			<staticText>
+				<reportElement x="120" y="140" width="334" height="19" uuid="68be26fa-1f1b-422e-8004-86a7d96ffc64"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[This is a computer-generated document and is strictly confidential.]]></text>
+			</staticText>
+			<line>
+				<reportElement x="-20" y="130" width="595" height="1" uuid="1ef9ff57-1f44-480d-810c-778e21a0d4fc"/>
+			</line>
+			<staticText>
+				<reportElement x="220" y="170" width="132" height="30" uuid="32708feb-192b-49d0-a975-8c58e3068880"/>
+				<textElement>
+					<font fontName="Arial Black"/>
+				</textElement>
+				<text><![CDATA[** End of Report **]]></text>
+			</staticText>
+		</band>
 	</summary>
 </jasperReport>
